--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <ul>
             <li><a href="index.html">Início</a></li>
             <li><a href="menu.html">Menu</a></li>
+            <li><a href="menu.html#galeria.html">Galeria</a></li>
         </ul>
     </nav>
 
