--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png">
+        <img src="logo.png">
     </header>
 
     <nav>
@@ -31,11 +31,11 @@
     <section class="destaques">
         <h2>Nossos Destaques</h2>
         <div class="produto">
-            <img src="images/image1.jpg" width="150" height="100" alt="Bolo de Chocolate">
+            <img src="image1.jpg" width="150" height="100" alt="Bolo de Chocolate">
             <p>Bolo de Chocolate</p>
         </div>
         <div class="produto">
-            <img src="images/image2.jpg" width="100" height="130" alt="Cupcake Especial">
+            <img src="image2.jpg" width="100" height="130" alt="Cupcake Especial">
             <p>Cupcake Especial</p>
         </div>
     </section>
