--- a/menu.html
+++ b/menu.html
@@ -35,19 +35,19 @@
  <section class="galeria">
 <div class="items">
     <div class="item active">
-        <img src="images/image3.jpg " width="500" height="500">
+        <img src="image3.jpg " width="500" height="500">
     </div>
     <div class=" item next">
-        <img src="images/image4.jpg " width="500" height="500">
+        <img src="image4.jpg " width="500" height="500">
     </div>
     <div class="item">
-        <img src="images/image5.jpg " width="500" height="500">
+        <img src="image5.jpg " width="500" height="500">
     </div>
     <div class="item">
-        <img src="images/image6.jpg " width="500" height="500">
+        <img src="image6.jpg " width="500" height="500">
     </div>
     <div class="item prev">
-        <img src="images/image7.jpg " width="500" height="500">
+        <img src="image7.jpg " width="500" height="500">
     </div>
     <div class="button-container">
         <div class="button"><i class="fas fa-angle-left"></i></div>
@@ -58,7 +58,10 @@
 
 
  <footer>
-    <p>&copy; 2025 Confeitaria Criativa - Todos os direitos reservados.</p>
+    <p><strong>contactos</strong></p>
+    <p>Instagram - @pastelariaidanha</p>
+    <p>Telemóvel - +270443552</p>
+    <p><strong>&copy; 2025 Confeitaria Criativa - Todos os direitos reservados.</strong></p>
 </footer>
 
 
