--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
         </div>
     </section>
 
+    <section class="concurso">
+        <img src="image_concurso.png" alt="Concurso" width="500px" height="700px">
+    <br>
+        <button><strong> Inscreve-te já </strong></button>
+    </section>
     <footer>
         <p>&copy; 2025 Confeitaria Criativa - Todos os direitos reservados.</p>
     </footer>
